# deepspikesort

./: .gitignore  README.md  clustering.py  comparison.py  dataset.py  deep_spike_sorting.ipynb  deep_spike_sorting_phase_1.ipynb  deep_spike_sorting_phase_2.ipynb  deepcluster.py  deepspikesort.py  dss_phase_1.ipynb  dss_phase_2.ipynb  evaluation.py  feature_extraction.py  generate_dataset.py  load_dataset.py  model.py  plot_waveforms.py  plotting.py  preprocessing.py  process_dataset.py  process_peaks.py  pyproject.toml  requirements.txt  run_classifier.py  run_dss.py  training.py
.ipynb_checkpoints/: deep_spike_sorting-checkpoint.ipynb
create_dataset/: combine_dataset.py  combine_peaks_files.py  create_dataset.py  create_dataset.sh  create_ibl_dataset.ipynb  create_ibl_dataset1.ipynb  create_ibl_dataset_evaluation.ipynb  create_peaks_files.py  create_peaks_files.sh  process_peaks.py
data/: create_dataset.py  load_dataset.py  submit_create_dataset.sh
models/: model.py
notebooks/: create_ibl_dataset.ipynb  create_ibl_dataset_evaluation.ipynb  dss_phase_2.ipynb
phase_1/: classify.py  dss_phase_1.ipynb  run_classify.py  submit_run_classify.sh
phase_2/: comparison.py  create_ibl_dataset_evaluation.ipynb  deepspikesort.py  dss_phase_2.ipynb  process_peaks.py  run_dss.py  run_dss_evaluation.py  submit_run_dss.sh
src/deepspikesort/: __init__.py  load_dataset.py  plotting.py  preprocessing.py  util.py
src/deepspikesort/create_dataset/: combine_peaks_files.py  create_peaks_files.py  create_peaks_files.sh  process_peaks.py
src/deepspikesort/models/: model.py
src/deepspikesort/phase_1/: classify.py  run_classify.py  submit_run_classify.sh
src/deepspikesort/phase_2/: comparison.py  pipeline.py  run_dss.py  run_dss_evaluation.py
